--- a/src/styles/register-styles.css
+++ b/src/styles/register-styles.css
@@ -85,7 +85,7 @@ header {
   display: block;
   transition: all 0.3s ease;
 }
-.menu a:nth-child(7) {
+.menu a:nth-child(8) {
   border-bottom: 0.1px solid #999;
 }
 
@@ -97,7 +97,7 @@ header {
 
 .is-active {
   opacity: 1;
-  transform: translate(0, -106%);
+  transform: translate(0, -105.7%);
 }
 
 /* Logo */
@@ -125,7 +125,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 
 /* formulario */
@@ -138,11 +137,11 @@ form {
   box-shadow: 2px 2px 50px 2px rgba(0, 0, 0, 0.2);
   padding: 2rem;
   border-radius: 1rem;
-  z-index: 2;
   background-color: white;
+  margin-bottom: 3rem;
 }
 
-.boton-registrate  {
+.boton-registrate {
   background-color: black;
   color: white;
   border-radius: 2rem;
@@ -158,13 +157,13 @@ form {
   border-radius: 2rem;
   padding: 0.5rem 1rem;
   border: 0;
-  background: rgb(119,198,202);
+  background: rgb(119, 198, 202);
 }
-.form-text p{
+.form-text p {
   font-size: 0.7rem;
 }
 
-.ingresa{
+.ingresa {
   text-decoration: none;
   color: #77c6ca;
 }
@@ -174,12 +173,83 @@ button:hover {
   cursor: pointer;
 }
 
-.form-login .behind_container {
-  background: rgb(119,198,202);
-  width: 30rem;
-  height: 25rem;
-  position: fixed;
-  z-index: 1;
-  border-radius: 1rem;
-  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.1);
+.ingresa:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* responsive */
+@media (min-width: 768px) and (min-height: 670px) {
+  h3 {
+    font-size: 1.5rem;
+  }
+  .auth-logos img {
+    height: 3rem;
+  }
+
+  /* formulario */
+  .form-login {
+    height: 92vh;
+  }
+
+  form {
+    height: 60rem;
+    min-width: 30rem;
+  }
+
+  .boton-registrate {
+    font-size: 2rem;
+  }
+
+  .form-text input {
+    width: 30rem;
+    height: 3rem;
+    font-size: 1.5rem;
+  }
+  .form-text p {
+    font-size: 1rem;
+    margin-left: 1rem;
+  }
+  form > p {
+    font-size: 1.5rem;
+  }
+
+  .ingresa {
+    font-size: 2rem;
+  }
+
+  /*HEADER*/
+
+  header {
+    top: 0;
+    position: static;
+    height: 60px;
+  }
+  .menu {
+    flex-direction: row;
+    top: 0;
+    transform: translate(0, -106%);
+  }
+  btn-menu {
+    display: none;
+  }
+
+  .menu a {
+    border: 0;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .menu a:nth-child(7) {
+    border-bottom: 0;
+  }
+  .is-active {
+    opacity: 1;
+    transform: translate(0, 50px);
+    position: fixed;
+  }
+  .logo img {
+    height: 60px;
+  }
 }
