--- a/src/styles/mobile-styles.css
+++ b/src/styles/mobile-styles.css
@@ -116,6 +116,7 @@ main {
   min-width: inherit;
 }
 
+/* Seccion inicial */
 .initial {
   display: flex;
   justify-content: space-evenly;
@@ -158,6 +159,29 @@ main {
   background-color: #87e7e7;
   font-weight: bold;
   box-shadow: -0.5px -0.5px 1.5px black;
+}
+
+/* carrito de compras y foto usuario (menu) */
+.cart-user {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+}
+/* .cart-user img {
+  background-color: #fff;
+  border-radius: 100%;
+} */
+.cart-user .cart {
+  height: 25px;
+  background-color: #fff;
+  border-radius: 100%;
+  padding: 3px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.cart-user .user-picture {
+  height: 40px;
+  border-radius: 100%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /* Por qué clens? */
@@ -357,4 +381,39 @@ main {
   font-size: 20px;
   border-radius: 100%;
   padding: 4px;
+}
+
+/* FOOTER */
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 15px;
+  background: #77c6ca;
+  color: white;
+  margin-bottom: 44px;
+  max-width: 768px;
+}
+footer h2 {
+  color: #3e599c;
+  margin: 15px 0;
+  font-size: 1.9rem;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li {
+  padding: 3px;
+  font-size: 1.4rem;
+}
+footer ul li a {
+  text-decoration: none;
+  color: white;
+}
+footer ul li a:hover {
+  color: #ff5151;
+  text-decoration: underline;
+}
+footer img {
+  width: 30px;
+  height: 30px;
 }
