--- a/src/styles/mobile-styles.css
+++ b/src/styles/mobile-styles.css
@@ -127,7 +127,7 @@ main {
 }
 .initial img {
   width: 100%;
-  height: 200px;
+  height: 20rem;
   min-width: inherit;
   max-width: inherit;
   position: absolute;
@@ -385,13 +385,13 @@ main {
 
 /* FOOTER */
 footer {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 15px;
   background: #77c6ca;
   color: white;
   margin-bottom: 44px;
-  max-width: 768px;
 }
 footer h2 {
   color: #3e599c;
@@ -416,4 +416,125 @@ footer ul li a:hover {
 footer img {
   width: 30px;
   height: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    align-items: center;
+    justify-content: stretch;
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    height: 44px;
+    background-color: #77c6ca;
+    padding: 0.5rem;
+    border-top: thin solid white;
+  }
+  .btn-menu {
+    display: none;
+  }
+  .logo {
+    /* width: 25%; */
+    padding-left: 2rem;
+  }
+  .menu {
+    position: relative;
+    align-items: center;
+    display: flex;
+    font-size: 1.8rem;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+    background-color: none;
+    transform: none;
+    opacity: 1;
+    /* width: 70%; */
+    transition: all 0.3s ease-in-out;
+    z-index: 0;
+    margin-right: 100px;
+  }
+  .menu a {
+    border-top: none;
+    width: 100%;
+    padding: 0;
+    color: #f0fefe;
+    display: block;
+    transition: all 0.3s ease;
+    margin: 0 10px;
+  }
+
+  /* Seccion inicial */
+  .initial {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    min-width: inherit;
+  }
+  .initial img {
+    width: 100%;
+    height: 200px;
+    min-width: inherit;
+    max-width: inherit;
+    position: absolute;
+    z-index: -999;
+    filter: brightness(70%);
+  }
+
+  /* carrito de compras y foto usuario (menu) */
+  .cart-user {
+    position: absolute;
+    right: 15px;
+    top: 1px;
+  }
+  /* .cart-user img {
+  background-color: #fff;
+  border-radius: 100%;
+} */
+  .cart-user .cart {
+    height: 25px;
+    background-color: #fff;
+    border-radius: 100%;
+    padding: 3px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  .cart-user .user-picture {
+    height: 40px;
+    border-radius: 100%;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  /* Por qué clens? */
+
+  .why-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-evenly;
+    margin: 15px auto;
+    gap: 15px;
+  }
+
+  /* Services */
+  .why-clens {
+    margin-bottom: 20px;
+  }
+
+  .services-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+  }
+  footer {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    padding: 15px;
+    background: #77c6ca;
+    color: white;
+    margin-bottom: 0;
+  }
 }
