fixed button background on menu desktop

--- a/src/styles/login-styles.css
+++ b/src/styles/login-styles.css
@@ -209,6 +209,10 @@ button:hover {
     padding: 0;
     margin: 0 10px;
   }
+
+  .menu a:hover {
+    background-color: #77c6ca;
+  }
   .menu a:nth-child(8) {
     border-bottom: 0;
   }
