added footer to login and register, and fixed servicess on desktop

--- a/src/styles/login-styles.css
+++ b/src/styles/login-styles.css
@@ -10,6 +10,8 @@ body {
   background-color: #f0fefe;
   min-width: 300px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 header {
   display: flex;
@@ -85,7 +87,7 @@ header {
   display: block;
   transition: all 0.3s ease;
 }
-.menu a:nth-child(8) {
+.menu a:nth-child(7) {
   border-bottom: 0.1px solid #999;
 }
 
@@ -97,7 +99,7 @@ header {
 
 .is-active {
   opacity: 1;
-  transform: translate(0, -105.7%);
+  transform: translate(0, -106%);
 }
 
 /* Logo */
@@ -123,10 +125,10 @@ header {
 
 /* formulario */
 .form-login {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 25vh auto;
 }
 
 form {
@@ -174,6 +176,45 @@ button:hover {
   cursor: pointer;
 }
 
+/* FOOTER */
+footer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 20px 60px 20px;
+  background: #77c6ca;
+  color: white;
+}
+footer h2 {
+  color: #3e599c;
+  margin: 15px 0;
+  font-size: 1.9rem;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li {
+  padding: 3px;
+  font-size: 1.4rem;
+}
+footer ul li a {
+  text-decoration: none;
+  color: white;
+}
+footer ul li a:hover {
+  color: #ff5151;
+  text-decoration: underline;
+}
+footer img {
+  width: 30px;
+  height: 30px;
+}
+
+footer .logo img {
+  width: 100px;
+  height: 100px;
+}
+
 /* responsive */
 @media (min-width: 768px) and (min-height: 670px) {
   header {
@@ -213,9 +254,11 @@ button:hover {
   .menu a:hover {
     background-color: #77c6ca;
   }
-  .menu a:nth-child(8) {
+  .menu a:nth-child(7) {
     border-bottom: 0;
   }
+
+  /* formulario desktop */
 
   h3 {
     font-size: 1.5rem;
@@ -224,11 +267,12 @@ button:hover {
     height: 3rem;
   }
 
-  /* formulario */
 
   .form-login {
-    height: 92vh;
+    margin: auto;
+    padding: 3vh;
   }
+
   form {
     height: 40rem;
     min-width: 30rem;
@@ -253,5 +297,14 @@ button:hover {
 
   .registrate {
     font-size: 2rem;
+  }
+
+  /* footer desktop */
+
+  footer {
+    grid-template-columns: repeat(6, 1fr);
+    align-items: space-evenly;
+    padding: 20px;
+    margin-bottom: 0;
   }
 }
