fixed reviews buttons

--- a/src/styles/index-styles.css
+++ b/src/styles/index-styles.css
@@ -1,5 +1,6 @@
 /* reset styles */
 * {
+  font-family: "Lato", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -306,7 +307,7 @@ main {
 
 /* Reviews - reseñas SLIDER *************************/
 .reviews-clens {
-  margin-bottom: 50px;
+  margin-bottom: 35px;
   width: 100%;
   padding: 20px;
 }
@@ -379,13 +380,13 @@ main {
 /* MENU NAVEGACION SLIDER - REVIEWS */
 .navigator-reviews {
   text-align: center;
-  margin-top: 325px;
+  margin-top: 345px;
 }
 
 .navigator-reviews li {
   display: inline-block;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 .navigator-reviews li a {
