--- a/src/styles/mobile-styles.css
+++ b/src/styles/mobile-styles.css
@@ -1,5 +1,6 @@
 /* reset styles */
 * {
+  font-family: "Lato", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -109,6 +110,7 @@ header {
 .logo img {
   height: 40px;
 }
+
 /* Estilos del Main */
 main {
   display: flex;
@@ -306,7 +308,7 @@ main {
 
 /* Reviews - reseñas SLIDER *************************/
 .reviews-clens {
-  margin-bottom: 50px;
+  margin-bottom: 35px;
   width: 100%;
   padding: 20px;
 }
@@ -379,13 +381,13 @@ main {
 /* MENU NAVEGACION SLIDER - REVIEWS */
 .navigator-reviews {
   text-align: center;
-  margin-top: 325px;
+  margin-top: 345px;
 }
 
 .navigator-reviews li {
   display: inline-block;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 .navigator-reviews li a {
