--- a/src/styles/info-cuenta.css
+++ b/src/styles/info-cuenta.css
@@ -1,16 +1,23 @@
 * {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-  background-color: #87E7E7;
+  font-size: 62.5%;
 }
 
 body {
+  background-color: #f0fefe;
+  min-width: 300px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.navbar {
+header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,11 +28,10 @@ body {
   height: 44px;
   background-color: #77c6ca;
   padding: 0.5rem;
-  left: 0
 }
 
 /* Estilos Boton Hamburguesa */
-.btn__menu {
+.btn-menu {
   width: 30%;
   height: auto;
   display: flex;
@@ -35,8 +41,9 @@ body {
   cursor: pointer;
   transition: 0.3s ease-out;
 }
-
-.btn__menu--1, .btn__menu--2, .btn__menu--3 {
+.linea-1,
+.linea-2,
+.linea-3 {
   width: 25px;
   height: 5px;
   background-color: #333;
@@ -44,20 +51,21 @@ body {
   transition: 0.3s ease-out;
 }
 
-.change-menu .btn__menu--1 {
+.change-menu .linea-1 {
   transform: rotate(-45deg) translate(3px, -3.5px);
   position: absolute;
 }
-.change-menu .btn__menu--2 {
+.change-menu .linea-2 {
   opacity: 0;
   transition: 0.1s;
 }
-.change-menu .btn__menu--3 {
+.change-menu .linea-3 {
   transform: rotate(45deg) translate(-6px, -6px);
 }
 
 /* estilos menu */
-.nav__menu {
+
+.menu {
   position: fixed;
   align-items: center;
   display: flex;
@@ -74,7 +82,7 @@ body {
   z-index: 998;
 }
 
-.nav__menu__item {
+.menu a {
   text-decoration: none;
   border-top: 0.1px solid #999;
   width: 100%;
@@ -82,14 +90,12 @@ body {
   color: #f0fefe;
   display: block;
   transition: all 0.3s ease;
-  font-size: 0.5em;
 }
-
-.nav__menu__item:nth-child(7) {
+.menu a:nth-child(8) {
   border-bottom: 0.1px solid #999;
 }
 
-.nav__menu__item:hover {
+.menu a:hover {
   color: #ff5151;
   background-color: #87e7e7;
   font-weight: bold;
@@ -97,33 +103,71 @@ body {
 
 .is-active {
   opacity: 1;
-  transform: translate(0, -106%);
+  transform: translate(0, -105.5%);
 }
 
 /* Logo */
-.navbar__logo {
+.logo {
   width: 70%;
   padding-left: 2rem;
 }
-
-.navbar__logo--mini {
+.logo img {
   height: 40px;
+}
+
+/* carrito de compras y foto usuario (menu) */
+.cart-user {
+  position: absolute;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  top: 5px;
+}
+/* .cart-user img {
+  background-color: #fff;
+  border-radius: 100%;
+} */
+.cart-user .cart {
+  height: 25px;
+  width: 25px;
+  background-color: #fff;
+  border-radius: 100%;
+  padding: 3px;
+  margin-right: 5px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cart-user .cart img {
+  height: 18px;
+}
+.cart-user .user-picture {
+  height: 40px;
+  border-radius: 100%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Card con info de usuario*/
+.card--desktop {
+  margin: 10vh 1rem;
 }
 
 .card {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-bottom: 70px
+  justify-content: center;
 }
 
 .card__form {
   background-color: white;
   display: flex;
-  width: 85%;
-  padding: 30px;
+  width: 90%;
+  padding: 2rem;
   flex-direction: column;
   border-radius: 20px;
+  box-shadow: 2px 2px 50px 2px rgba(0, 0, 0, 0.2);
 }
 
 .card__form__group {
@@ -133,24 +177,24 @@ body {
 .card__form__titulo {
   margin-bottom: 0.5rem;
   color: #929292;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .card__form__input {
   border: 0;
   border-bottom: 1px solid gray;
   padding: 0 10px 5px 0;
-  width: 100%
+  width: 100%;
 }
 
 .card__form__h2 {
   margin: 30px 0 10px 0;
-  font-size: 2.7rem;
+  font-size: 3rem;
 }
 
 .card__form__h4 {
-  margin: 60px 5px 0 5px;
-  font-size: 1.4rem;
+  margin: 40px 5px 0 5px;
+  font-size: 1rem;
 }
 
 .card__form__h5 {
@@ -161,14 +205,18 @@ body {
 .card__form__btn {
   margin: auto;
   margin-top: 30px;
-  width: 180px;
-  height: 75px;
+  width: 130px;
+  height: 60px;
   background-color: black;
   color: white;
   font-size: 1.6em;
   font-weight: bold;
   border-radius: 10px;
   border-style: solid;
+}
+.card__form__btn:hover {
+  font-size: 2.5rem;
+  cursor: pointer;
 }
 
 .pass-eye {
@@ -182,22 +230,128 @@ body {
 }
 
 .info__img {
-  display: none
+  display: none;
 }
 
-@media screen and (min-width: 1025px ) {
+/* FOOTER */
+footer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 20px 20px 60px 20px;
+  background: #77c6ca;
+  color: white;
+}
+footer h2 {
+  color: #3e599c;
+  margin: 15px 0;
+  font-size: 1.9rem;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li {
+  padding: 3px;
+  font-size: 1.4rem;
+}
+footer ul li a {
+  text-decoration: none;
+  color: white;
+}
+footer ul li a:hover {
+  color: #ff5151;
+  text-decoration: underline;
+}
+footer img {
+  width: 30px;
+  height: 30px;
+}
+
+footer .logo img {
+  width: 100px;
+  height: 100px;
+}
+
+@media screen and (min-width: 1025px) {
+  header {
+    align-items: center;
+    justify-content: stretch;
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    height: 44px;
+  }
+  .btn-menu {
+    display: none;
+  }
+  .logo {
+    /* width: 25%; */
+    padding-left: 2rem;
+  }
+  .logo img {
+    height: 44px;
+  }
+  .menu {
+    position: relative;
+    align-items: center;
+    font-size: 1.8rem;
+    flex-direction: row;
+    transform: none;
+    /* width: 70%; */
+    z-index: 0;
+    margin-right: 100px;
+  }
+  .menu a {
+    border-top: none;
+    padding: 0;
+    margin: 0 10px;
+    background-color: #77c6ca;
+  }
+  .menu a:hover {
+    background-color: #77c6ca;
+  }
+
+  .menu a:nth-child(8) {
+    border-bottom: 0;
+  }
+  /* carrito de compras y foto usuario (menu) */
+  .cart-user {
+    position: absolute;
+    right: 15px;
+    top: 1px;
+  }
+  /* .cart-user img {
+  background-color: #fff;
+  border-radius: 100%;
+} */
+  .cart-user .cart {
+    height: 25px;
+    background-color: #fff;
+    border-radius: 100%;
+    padding: 3px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  .cart-user .user-picture {
+    height: 40px;
+    border-radius: 100%;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
   .card {
     display: flex;
-    height: 100vh;
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
+  .card--desktop {
+    margin: auto 3rem;
+    padding: 2rem;
+  }
 
   .card__form {
     width: 40%;
-    padding: 30px;
-    border-radius: 20px;
+    padding: 5rem;
+    font-size: 1.5rem;
   }
 
   .info__img {
@@ -205,11 +359,31 @@ body {
     display: flex;
   }
 
-  .card__form__group {
-    width: 85%
+  .card__form__titulo {
+    font-size: 1.5rem;
   }
 
-  .navbar {
-    left: 0;
+  .card__form__input {
+    font-size: 1.5rem;
+  }
+
+  .card__form__h2 {
+    font-size: 3.5rem;
+  }
+
+  .card__form__h4 {
+    font-size: 2rem;
+  }
+
+  .card__form__h5 {
+    font-size: 2rem;
+  }
+
+  /* footer desktop */
+  footer {
+    grid-template-columns: repeat(6, 1fr);
+    align-items: space-evenly;
+    padding: 20px;
+    margin-bottom: 0;
   }
 }
