--- a/src/styles/mobile-styles.css
+++ b/src/styles/mobile-styles.css
@@ -109,7 +109,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   width: 150px;
-  position: absolute;
+  position: fixed;
   right: 0px;
   top: 45px;
   transition: all 0.3s ease-out;
