--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,15 @@
 html {
   font-size: 62.5%;
 }
+
+@media screen and (min-width: 769px) {
+  html {
+    font-size: 70%
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  html {
+    font-size: 80%
+  }
+}
