updated footer and header styles

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,7 +5,9 @@ footer {
   padding: 20px;
   background: #77c6ca;
   color: white;
+  margin-top: auto;
   margin-bottom: 44px;
+  font-size: 62.5%;
 }
 
 footer h2 {
