--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -2,8 +2,8 @@
   font-family: 'Lato', sans-serif;
 }
 .form_login {
-  min-height: 20rem;
-  width: 12rem;
+  min-height: 32rem;
+  width: 25rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -12,15 +12,15 @@
   padding: 2rem;
   border-radius: 1rem;
   background-color: white;
-  margin: auto;
+  margin: 15vh auto;
 
   &__item {
     h3 {
-      font-size: 0.8rem;
       margin: 0.5rem 1rem;
       text-align: left;
     }
     input {
+      width: 20rem;
       border-radius: 2rem;
       padding: 0.5rem 1rem;
       border: 0;
@@ -29,7 +29,6 @@
   }
 
   &__text{
-    font-size: 1rem;
     margin: 0.3rem 0;
   }
 
@@ -39,6 +38,7 @@
     border-radius: 2rem;
     padding: 0.5rem 1rem;
     margin: 0.5rem 0 0 0;
+    font-size: 1.5rem;
   }
   &__button__login:hover {
     font-weight: bold;
@@ -56,6 +56,7 @@
   }
 
   &__button__register {
+    font-size: 1.5rem;
     text-decoration: none;
     color: #77c6ca;
   }
@@ -65,30 +66,25 @@
   }
 }
 
-@media (min-width: 769px) and (min-height: 670px) {
+@media (min-width: 769px) {
 .form_login {
-  margin: auto;
+  margin: 22vh auto;
   padding: 1.5rem;
-  height: 25rem;
-  min-width: 18rem;
+  height: 28rem;
+  width: 22rem;
 
   &__item {
-    h3 {
-      font-size: 1.2rem;
-    }
+
     input {
-      width: 15rem;
-      height: 1.5rem;
-      font-size: 1.2rem;
+      width: 18rem;
+      height: 2.2rem;
     }
   }
   &__text{
-    font-size: 1.2rem;
     margin: 1rem;
   }
 
   &__button__login {
-    font-size: 1.2rem;
     margin: 0.8rem 0 0 0;
   }
 
@@ -98,10 +94,6 @@
   &__logo_login {
     height: 2rem;
     margin: 0.8rem;
-  }
-
-  &__button__register {
-    font-size: 1.2rem;
   }
 }
 
