--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -2,8 +2,8 @@
   font-family: 'Lato', sans-serif;
 }
 .form_register {
-  min-height: 30rem;
-  width: 17rem;
+  min-height: 45rem;
+  width: 30rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -12,30 +12,28 @@
   padding: 2rem;
   border-radius: 1rem;
   background-color: white;
-  margin: auto;
+  margin: 10vh auto;
 
   &__item {
     h3 {
-      font-size: 0.8rem;
       margin: 0.5rem 1rem;
       text-align: left;
     }
     input {
-      width: 15rem;
+      width: 26rem;
       border-radius: 2rem;
       padding: 0.5rem 1rem;
       border: 0;
       background: rgb(119, 198, 202);
     }
     p {
-      font-size: 0.6rem;
       text-align: left;
+      font-size: 70%;
       margin: 0.2rem 0 -0.2rem 1rem;
     }
   }
 
   &__text {
-    font-size: 1rem;
     margin: 0.3rem 0;
   }
 
@@ -45,6 +43,7 @@
     border-radius: 2rem;
     padding: 0.5rem 1rem;
     margin: 0.5rem 0 0 0;
+    font-size: 1.5rem;
   }
   &__button__register:hover {
     font-weight: bold;
@@ -62,6 +61,7 @@
   }
 
   &__button__login {
+    font-size: 1.5rem;
     text-decoration: none;
     color: #77c6ca;
   }
@@ -71,20 +71,20 @@
   }
 }
 
-@media (min-width: 769px) and (min-height: 670px) {
+@media (min-width: 769px) {
   .form_register {
     margin: auto;
     padding: 1.5rem;
-    height: 40rem;
+    height: 50rem;
     min-width: 25rem;
+    margin: 15vh auto;
 
     &__item {
       h3 {
         font-size: 1.2rem;
       }
       input {
-        width: 20rem;
-        height: 1.5rem;
+        width: 24rem;
         font-size: 1.2rem;
       }
       p {
@@ -97,7 +97,7 @@
     }
 
     &__button__register {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       margin: 0.8rem 0 0 0;
     }
 
@@ -109,8 +109,5 @@
       margin: 0.8rem;
     }
 
-    &__button__login {
-      font-size: 1.2rem;
-    }
   }
 }
