--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -1,4 +1,4 @@
-*{
+* {
   font-family: 'Lato', sans-serif;
 }
 .form_login {
@@ -28,7 +28,7 @@
     }
   }
 
-  &__text{
+  &__text {
     margin: 0.3rem 0;
   }
 
@@ -67,34 +67,37 @@
 }
 
 @media (min-width: 769px) {
-.form_login {
-  margin: 22vh auto;
-  padding: 1.5rem;
-  height: 28rem;
-  width: 22rem;
+  .form_login {
+    margin: 22vh auto;
+    padding: 1.5rem;
+    height: 28rem;
+    width: 22rem;
 
-  &__item {
+    &__item {
+      h3 {
+        font-size: 1.2rem;
+      }
+      input {
+        width: 18rem;
+        height: 2.2rem;
+      }
+    }
+    &__text {
+      font-size: 1.2rem;
+      margin: 1rem;
+    }
 
-    input {
-      width: 18rem;
-      height: 2.2rem;
+    &__button__login {
+      font-size: 1.5rem;
+      margin: 0.8rem 0 0 0;
+    }
+
+    &__logos_login {
+      height: 2.5rem;
+    }
+    &__logo_login {
+      height: 2rem;
+      margin: 0.8rem;
     }
   }
-  &__text{
-    margin: 1rem;
-  }
-
-  &__button__login {
-    margin: 0.8rem 0 0 0;
-  }
-
-  &__logos_login {
-    height: 2.5rem;
-  }
-  &__logo_login {
-    height: 2rem;
-    margin: 0.8rem;
-  }
-}
-
 }
