--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -29,6 +29,8 @@
     align-items: center;
     cursor: pointer;
     transition: 0.3s ease-out;
+    background-color: #77c6ca;
+    border: none;
 
     /* Estilos Boton Hamburguesa */
     &--1,
@@ -162,7 +164,7 @@
 
 .is-active {
   opacity: 1;
-  transform: translate(0, -105.7%);
+  transform: translate(0, -55%);
 }
 
 .is-active-menu-perfil {
