--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -89,13 +89,14 @@
     width: 150px;
     position: absolute;
 
-    right: 51px;
-    bottom: 50px;
+    right: 70px;
+    bottom: 45px;
 
     transition: all 0.3s ease-out;
     background-color: #77c6ca;
     pointer-events: none;
     opacity: 0;
+    border: thin solid #999;
 
     &__a {
       text-decoration: none;
@@ -120,9 +121,9 @@
     flex-direction: column;
   }
 
-  &__cart {
-    height: 30px;
-    width: 30px;
+  &__user--cart {
+    height: 40px;
+    width: 40px;
     background-color: #fff;
     border-radius: 100%;
     padding: 3px;
@@ -131,6 +132,14 @@
     align-items: center;
     justify-content: center;
     margin: 5px;
+    cursor: pointer;
+    background-size: contain;
+    border-style: double;
+    border-color: #77c6ca;
+    background-image: url('../../img/icons/cart.svg');
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   &__icon {
@@ -141,10 +150,24 @@
   background-color: #fff;
   border-radius: 100%;
   } */
-  &__picture {
-    height: 40px;
+  &__user--user {
+    height: 60px;
+    width: 60px;
+    background-color: #fff;
     border-radius: 100%;
+    padding: 3px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    cursor: pointer;
+    background-image: url('https://randomuser.me/api/portraits/women/21.jpg');
+    background-size: 61px;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-style: double;
+    border-color: #77c6ca;
   }
 }
 
@@ -203,7 +226,7 @@
       transform: none;
       /* width: 70%; */
       z-index: 0;
-      margin-right: 80px;
+      margin-right: 150px;
     }
 
     &__a {
@@ -226,14 +249,14 @@
     }
     /* menu perfil */
     &__perfil {
-      bottom: -161px;
+      bottom: -190px;
       right: 15px;
     }
     /* carrito de compras y foto usuario (menu) */
     &__user {
       position: absolute;
       right: 15px;
-      top: 22px;
+      top: 30px;
       flex-direction: row;
     }
     /* .cart-user img {
