--- a/src/components/SectionInfo/styles.scss
+++ b/src/components/SectionInfo/styles.scss
@@ -10,6 +10,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
+    font-size: 1.5rem;
   }
   &__img {
     display: block;
