fixed styles to fit home page and added section etiquete

--- a/src/components/TitleMinititle/styles.scss
+++ b/src/components/TitleMinititle/styles.scss
@@ -3,7 +3,7 @@
 
   &__minititle {
     color: #8198a4;
-    margin: 3rem;
+    margin: 3rem 0;
     font-size: 1.5rem;
     text-align: justify;
   }
