--- a/src/components/SectionInfo/styles.scss
+++ b/src/components/SectionInfo/styles.scss
@@ -6,9 +6,7 @@
   }
 
   &__info {
-    max-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: justify;
     margin-bottom: 50px;
     font-size: 1.5rem;
   }
