--- a/src/components/HowItWorks/styles.scss
+++ b/src/components/HowItWorks/styles.scss
@@ -1,3 +1,59 @@
 .how-it-works {
-  padding: 3rem;
+  padding: 1.5rem 3rem;
+}
+
+@media (min-width: 769px) {
+  .how-it-works {
+    padding: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 2rem;
+    justify-content: space-around;
+
+    .minititle-title {
+      grid-row: 1;
+      grid-column: 1/4;
+    }
+
+    .section-info {
+      &__info {
+        min-width: 200px;
+        margin: 1rem auto;
+      }
+      &__img {
+        height: 200px;
+        max-width: 100%;
+        margin-bottom: 2rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 1025px) {
+  .how-it-works {
+    padding: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 2rem;
+    justify-content: space-around;
+
+    .minititle-title {
+      grid-row: 1;
+      grid-column: 1/4;
+    }
+
+    .section-info {
+      &__info {
+        width: 320px;
+        margin: auto;
+      }
+      &__img {
+        height: 200px;
+        max-width: 100%;
+        margin-bottom: 2rem;
+      }
+    }
+  }
 }
