--- a/src/components/MinititleTitle.jsx/styles.scss
+++ b/src/components/MinititleTitle.jsx/styles.scss
@@ -1,15 +1,17 @@
 .minititle-title {
   width: 100%;
 
-  &__minititle {
+ &__minititle {
     color: #8198a4;
-    margin: 25px 0;
+    margin: 3rem 0;
     font-size: 1.5rem;
+    text-align: center;
   }
 
   &__title {
     font-size: 3rem;
     font-weight: bold;
-    margin-top: -10px;
+    margin-top: 2rem;
+    text-align: center;
   }
 }
