--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,7 @@
   }
 
   &__btn-menu {
-    width: 30%;
+    margin-right: 2.5rem;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -202,7 +202,7 @@
     position: relative;
     z-index: 0;
     width: 100%;
-    height: 44px;
+    height: 60px;
     border-top: 0;
 
     &__logo {
@@ -211,7 +211,7 @@
     }
 
     &__img {
-      height: 40px;
+      height: 60px;
     }
 
     &__btn-menu {
@@ -224,6 +224,7 @@
       font-size: 1.8rem;
       flex-direction: row;
       transform: none;
+      justify-content: left;
       /* width: 70%; */
       z-index: 0;
       margin-right: 150px;
