--- a/src/components/CardsReseñas/styles.scss
+++ b/src/components/CardsReseñas/styles.scss
@@ -1,15 +1,16 @@
 .review-cards {
   width: 100%;
   position: relative;
-  height: 50rem;
+  height: 40rem;
 
   .review-card {
     position: absolute;
     top: 2rem;
     transition: opacity 0.5s;
+    opacity: 0;
     padding: 20px;
     background-color: #f0fefe;
-    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
 
     &__comment {
       background-color: #fff;
@@ -36,19 +37,35 @@
       align-items: center;
     }
     &__picture img {
-        height: 100px;
-        border-radius: 50%;
-      }
+      height: 100px;
+      border-radius: 50%;
+    }
     &__name h4 {
-        font-size: 1.8rem;
-        font-weight: bold;
-      }
+      font-size: 1.8rem;
+      font-weight: bold;
+    }
 
-    .reviews-clens .sliderDad .review-wrapper:first-child {
+    &:first-child {
       opacity: 1;
     }
-    .reviews-clens .sliderDad .review-wrapper:target {
+    &:target {
       opacity: 1;
+    }
+  }
+}
+
+@media (min-width: 769px) {
+  .review-cards {
+    display: flex;
+    justify-content: center;
+
+    .review-card {
+      width: 40rem;
+
+      &__picture img {
+        height: 150px;
+        margin-bottom: 1rem;
+      }
     }
   }
 }
