--- a/src/components/HowItWorks/styles.scss
+++ b/src/components/HowItWorks/styles.scss
@@ -38,6 +38,8 @@
     grid-template-rows: auto auto;
     gap: 2rem;
     justify-content: space-around;
+    max-width: 1700px;
+    margin: auto auto;
 
     .minititle-title {
       grid-row: 1;
