--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -2,13 +2,14 @@
   font-family: 'Lato', sans-serif;
 }
 .form_login {
+  min-height: 54rem;
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem 3rem 5rem 3rem;
+  padding: 0rem 3rem 5rem 3rem;
   background-color: rgb(119, 198, 201);
 
   &__logo {
@@ -90,6 +91,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    margin-bottom: 1rem;
   }
   &__button__p {
     font-size: 1.8rem;
