--- a/src/components/BtnSolicita/styles.scss
+++ b/src/components/BtnSolicita/styles.scss
@@ -34,6 +34,7 @@
     -moz-box-shadow: 4px 3px 28px -8px rgba(0, 0, 0, 0.7);
     box-shadow: 4px 3px 28px -8px rgba(0, 0, 0, 0.7);
     cursor: pointer;
+    transform: rotate(-3deg);
   }
 }
 
