--- a/src/components/MinititleTitle/styles.scss
+++ b/src/components/MinititleTitle/styles.scss
@@ -1,7 +1,7 @@
 .minititle-title {
   width: 100%;
 
- &__minititle {
+  &__minititle {
     color: #8198a4;
     margin: 3rem 0;
     font-size: 1.5rem;
@@ -13,5 +13,19 @@
     font-weight: bold;
     margin-top: 2rem;
     text-align: center;
+  }
+
+  &__info {
+    margin: 3rem 0;
+    font-size: 1.5rem;
+    text-align: justify;
+  }
+}
+
+@media (min-width: 769px) {
+  .minititle-title {
+    &__info {
+      text-align: center;
+    }
   }
 }
