Applied context in login

--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -86,7 +86,7 @@
   }
   .to_register,
   .to_recover {
-    width: 40rem;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
