--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -88,7 +88,7 @@
     margin: 0.5rem;
   }
   .to_login {
-    width: 40rem;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
