--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 * {
+  font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -6,16 +7,26 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  background-color: #f0fefe;
+}
+
+#root {
+  height: 100%;
 }
 
 @media screen and (min-width: 769px) {
   html {
-    font-size: 70%
+    font-size: 70%;
   }
 }
 
 @media screen and (min-width: 1025px) {
   html {
-    font-size: 80%
+    font-size: 80%;
   }
 }
