--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -3,13 +3,13 @@
 }
 .form_login {
   min-height: 54rem;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0rem 3rem 5rem 3rem;
+  padding: 0 3rem;
   background-color: rgb(119, 198, 201);
 
   &__logo {
@@ -91,7 +91,6 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 1rem;
   }
   &__button__p {
     font-size: 1.8rem;
@@ -105,6 +104,8 @@
 
 @media (min-width: 769px) {
   .form_login {
+    padding: 0;
+
     &__item {
       input {
         width: 30rem;
