--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -4,8 +4,8 @@
 
 .form_register {
   min-height: 71rem;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
