--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,7 +6,7 @@ footer {
   background: #77c6ca;
   color: white;
   margin-top: auto;
-  margin-bottom: 44px;
+  padding-bottom: 6rem;
   font-size: 62.5%;
 }
 
