--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -68,7 +68,7 @@
     padding: 10px 0;
     color: #f0fefe;
     display: block;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease-in-out;
   }
 
   &__a:nth-child(8) {
@@ -78,7 +78,6 @@
   &__a:hover,
   &__login:hover,
   &__register:hover {
-    color: #ff5151;
     background-color: #87e7e7;
     font-weight: bold;
   }
@@ -263,6 +262,7 @@
     width: 100vw;
     height: 60px;
     border-top: 0;
+    transition: all 0.3s ease-in-out;
 
     &__logo {
       /* width: 25%; */
@@ -286,6 +286,7 @@
       justify-content: left;
       /* width: 70%; */
       z-index: 0;
+      background-color: transparent;
     }
 
     &__a {
@@ -297,12 +298,14 @@
       transition: all 0.3s ease;
       margin: 0 10px;
       font-size: 70%;
+      background-color: transparent;
     }
 
     &__a:hover,
     &__login:hover,
     &__register:hover {
-      background-color: #77c6ca;
+      font-weight: bold;
+      background-color: transparent;
     }
 
     &__a:nth-child(8) {
@@ -339,5 +342,8 @@
       border-radius: 100%;
       box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     }
+  }
+  .transparent {
+    background-color: transparent;
   }
 }
