--- a/src/components/InfoCuenta/InfoCuenta.scss
+++ b/src/components/InfoCuenta/InfoCuenta.scss
@@ -6,6 +6,10 @@
 
   &--desktop {
     margin: 10vh 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
   }
 
   &__form {
