--- a/src/pages/Page404/styles.scss
+++ b/src/pages/Page404/styles.scss
@@ -1,6 +1,6 @@
 .page404 {
-  min-height: 30rem;
-  height: 100vh;
+  min-height: 70rem;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -34,6 +34,6 @@
 
 @media (min-width: 769px) {
   .page404 {
-    height: calc(100vh - 60px);
+    height: 100vh;
   }
 }
