--- a/src/components/GoOrder/Cotiza/styles.scss
+++ b/src/components/GoOrder/Cotiza/styles.scss
@@ -9,7 +9,7 @@
   padding-bottom: 1rem;
 
   .control-label {
-    p {
+    & > p {
       margin-bottom: 1rem;
     }
   }
@@ -45,6 +45,11 @@
         border-right: none;
         text-align: center;
         color: #77c6ca;
+        background-color: #e2e2e2;
+        display: flex;
+        align-items: center;
+        text-transform: capitalize;
+        justify-content: center;
       }
       &-button {
         border: 2px solid #77c6ca;
@@ -63,6 +68,10 @@
           border-top-right-radius: 5px;
           border-bottom-right-radius: 5px;
         }
+      }
+      &-button:active {
+        background-color: #77c6ca;
+        color: white;
       }
     }
   }
@@ -92,9 +101,13 @@
 
   input {
     display: none;
+    background-color: transparent;
   }
 
-  span {
+  &__text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
     border: 2px solid #77c6ca;
     text-align: center;
@@ -102,8 +115,13 @@
     width: 100%;
     height: 100%;
     color: #77c6ca;
+    p {
+      padding: 0;
+      margin-bottom: 0;
+      text-align: center;
+    }
   }
-  input[type='radio']:checked + span {
+  input[type='radio']:checked + .option-label__text {
     background-color: #77c6ca;
     color: white;
   }
@@ -126,7 +144,7 @@
   box-shadow: 2px 2px 10px 1px gray;
 }
 
-.btn-primary:disabled {
+#btn-continue:disabled {
   background-color: gray;
   box-shadow: none;
 }
