Added functionality to save form filled previously

--- a/src/components/GoOrder/OrderTime/styles.scss
+++ b/src/components/GoOrder/OrderTime/styles.scss
@@ -49,6 +49,7 @@
     input:disabled + .option-label__text {
       color: rgb(172, 172, 172);
       border: 2px solid rgb(172, 172, 172);
+      background-color: rgb(241, 241, 241);
     }
   }
 }
